RESOLVED FIXED240691
[MacCatalyst] REGRESSION(r290091): sometimes can hang if `WKWebView` is unparented before the next visible content rect update
https://bugs.webkit.org/show_bug.cgi?id=240691
Summary [MacCatalyst] REGRESSION(r290091): sometimes can hang if `WKWebView` is unpar...
Devin Rousso
Reported 2022-05-19 15:47:25 PDT
.
Attachments
Devin Rousso
Comment 1 2022-05-19 15:47:39 PDT
Devin Rousso
Comment 2 2022-05-19 21:08:49 PDT
EWS
Comment 3 2022-05-20 16:10:32 PDT
Committed r294589 (250822@main): <https://commits.webkit.org/250822@main> Reviewed commits have been landed. Closing PR #817 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.