[MacCatalyst] REGRESSION(r290091): sometimes can hang if `WKWebView` is unparented before the next visible content rect update https://bugs.webkit.org/show_bug.cgi?id=240691 <rdar://problem/92006847>

Reviewed by Wenson Hsieh.

Test: WKWebViewResize.RemovesAssertionsAfterMovingToWindow

* Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:
(-[WKWebView _processWillSwapOrDidExit]):
(-[WKWebView didMoveToWindow]):
(-[WKWebView _acquireResizeAssertionForReason:]):
Drive-by: WebProcess crashes should also clear the resize assertions.
Drive-by: Add a 1s timeout in case the next visible content rect update takes too long.

* Source/WebKit/UIProcess/API/ios/WKWebViewPrivateForTestingIOS.h:
* Source/WebKit/UIProcess/API/ios/WKWebViewTestingIOS.mm:
(-[WKWebView _hasResizeAssertion]): Added.
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewResize.mm:
(TEST.WKWebViewResize.RemovesAssertionsAfterMovingToWindow): Added.

Canonical link: https://commits.webkit.org/250822@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294589 268f45cc-cd09-0410-ab3c-d52691b4dbfc